# AdventOfCode

./: LICENSE  README.md  day02.ipynb  day04.ipynb  day05.ipynb  day07.ipynb  day08.ipynb  day09.ipynb  day10.ipynb  day11.ipynb  day12.ipynb  day13.ipynb  day14.ipynb  day15.ipynb  day16.ipynb  day17.ipynb  day18.ipynb  day19.ipynb  day22.ipynb  day23.ipynb  day25.ipynb  pyproject.toml  t.py
2021/: day01.ipynb  day02.ipynb  day03.ipynb
2021/day01/: solution_draft.ipynb
2021/day02/: solution_draft.ipynb
2021/day03/: solution_draft.ipynb
2021/day04/: solution.ipynb  solution_draft.ipynb
2021/day05/: solution.ipynb
2021/day06/: solution.ipynb
2021/day07/: solution.ipynb  solution_draft.ipynb
2021/day08/: solution.ipynb
2021/day09/: solution.ipynb
2021/day10/: solution.ipynb  solution_draft.ipynb
2021/day11/: solution_draft.ipynb
2021/day12/: solution_draft.ipynb
2021/day13/: solution.ipynb  solution_draft.ipynb
2021/day14/: solution_draft.ipynb
2021/day15/: solution_draft.ipynb
2021/day16/: solution_draft.ipynb
2021/day17/: solution_draft.ipynb
2022/: day01.ipynb  day03.ipynb  day06.ipynb  day16.ipynb  day19.ipynb  day20.ipynb
2022/day01/: solution_draft.ipynb
2022/day02/: day02.ipynb  solution_draft.ipynb
2022/day03/: solution_draft.ipynb
2022/day04/: solution_draft.ipynb
2022/day05/: solution_draft.ipynb
2022/day06/: solution_draft.ipynb
2022/day07/: solution_draft.ipynb
2022/day08/: solution_draft.ipynb
2023/: day01_clean.ipynb
helper/: grid.py
template/: apply_template.py  solution.ipynb  solution_draft.ipynb
(+57 files in other folders)
