[tool.poetry]
name = "helper"
version = "0.1.0"
description = "Helper functions and objects for Advent Of Code"
authors = ["Günther Jena <guenther@jena.at>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
